--- a/Лабораторная №3/FileExchanger/FileExchanger/FileExchanger.csproj
+++ b/Лабораторная №3/FileExchanger/FileExchanger/FileExchanger.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Authorization.Designer.cs">
       <DependentUpon>Authorization.cs</DependentUpon>
     </Compile>
+    <Compile Include="files.cs" />
     <Compile Include="MainPage_admin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +70,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleAdmin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SimpleAdmin.Designer.cs">
+      <DependentUpon>SimpleAdmin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserPage.Designer.cs">
+      <DependentUpon>UserPage.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Authorization.resx">
       <DependentUpon>Authorization.cs</DependentUpon>
     </EmbeddedResource>
@@ -87,6 +100,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SimpleAdmin.resx">
+      <DependentUpon>SimpleAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserPage.resx">
+      <DependentUpon>UserPage.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
